# trowel

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
demo/: demo.tape  plan.json  plan.out
demo/example/: .terraform.lock.hcl  apple.tf  banana.tf  orange.tf  pear.tf  pineapple.tf
src/: main.rs  tf_client.rs  ui.rs
src/model/: mod.rs  tf_plan.rs  trowel_diff.rs  verb.rs
src/state/: app_state.rs  mod.rs  planning_view_state.rs  text_view_state.rs  tree_view_state.rs
src/widget/: app_view.rs  error_view.rs  mod.rs  planning_view.rs  text_view.rs  tree_view.rs
trowel/: __init__.py  app.py  app.tcss  clock_demo.py  json_viewer.py  mock_tf_plan_viewer.py  tf_plan_viewer.py
trowel-rs/: Cargo.toml
trowel-rs/src/: app.rs  main.rs  ui.rs
trowel-rs/src/model/: diff.rs  mod.rs  tf_plan.rs  trowel_diff.rs  verb.rs
trowel-rs/src/state/: app_state.rs  mod.rs  text_view_state.rs  tree_view_state.rs  trowel_state.rs
trowel-rs/src/widget/: app_view.rs  error_view.rs  mod.rs  trowel_text_view.rs  trowel_tree_view.rs  trowel_view.rs
