[package]
name = "trowel-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tui-scrollview = "0.5.1"
tui-tree-widget = "0.23.0"

[lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
unreachable = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_in_result = "warn"
ok_expect = "warn"
