[project]
name = "trowel"
version = "0.1.0"
description = ""
authors = [
    {name = "Ciaran De Groot",email = "ciaran.deg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "textual (>=2.1.2,<3.0.0)"
]

[project.scripts]
trowel = "trowel:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
