[project]
name = "trowel"
version = "0.1.0"
description = "A TUI for viewing OpenTofu/Terraform plans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=2.1.2",
]

[project.scripts]
trowel = "trowel:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
